selfhost/test/typechecker/bindingdecl/error_invalid_destructuring_tuple_non_tuple.1.out
Error at %FILE_NAME%:2:5
Invalid destructuring
  |  val (a, b) = x
         ^
A value of type 'Int' cannot be destructured as a tuple
